# xfire

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.crossfire/: config.example.yaml
.github/workflows/: crossfire.yml  xfire.yml
.openclaw/: skill.md
.xfire/: config.example.yaml
crossfire/: __init__.py  cli.py  cli_ui.py
crossfire/agents/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  consensus.py  debate_engine.py  fast_model.py  gemini_adapter.py  review_engine.py
crossfire/agents/prompts/: context_prompt.py  defense_prompt.py  guardrails.py  judge_prompt.py  prosecutor_prompt.py  review_prompt.py
crossfire/auth/: __init__.py  store.py
crossfire/config/: defaults.py  settings.py
crossfire/core/: __init__.py  baseline.py  cache.py  context_builder.py  diff_resolver.py  finding_synthesizer.py  intent_inference.py  models.py  orchestrator.py  policy_engine.py  severity.py
crossfire/demo/: scenarios.py
crossfire/integrations/github/: comment_poster.py  pr_loader.py
crossfire/output/: __init__.py  debate_view.py  debug_log.py  json_report.py  markdown_report.py  sarif_report.py
crossfire/skills/: base.py  code_navigation.py  config_analysis.py  data_flow_tracing.py  dependency_analysis.py  git_archeology.py  test_coverage_check.py
docs/: architecture.md  debate-engine.md  eval-plan.md  finding-schema.md  prompting-strategy.md  review-methodology.md  threat-model.md
docs/strategy/: 1b-cache-staleness-validation.md  2-debate-engine-redesign.md  caching-strategy.md
tests/: conftest.py
tests/demo/: scenarios.py
tests/fixtures/prs/auth_bypass_regression/: context.json  diff.patch  expected.json
tests/fixtures/prs/command_injection_exposure/: context.json  diff.patch  expected.json
tests/fixtures/prs/destructive_migration/: context.json  diff.patch  expected.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_adapters.py  test_agents.py  test_auth_store.py  test_cache.py  test_cli.py  test_comment_poster.py  test_consensus.py  test_context_builder.py  test_debate_engine.py  test_finding_synthesizer.py  test_intent_inference.py  test_models.py  test_orchestrator.py  test_policy_engine.py  test_pr_loader.py  test_prompts.py  test_purpose_aware.py  test_reports.py  test_review_engine.py  test_settings.py  test_severity.py  test_skills.py
xfire/: __init__.py  cli.py  cli_ui.py
xfire/agents/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  consensus.py  debate_engine.py  fast_model.py  gemini_adapter.py  review_engine.py  tools.py
xfire/agents/prompts/: context_prompt.py  defense_prompt.py  guardrails.py  judge_prompt.py  prosecutor_prompt.py  review_prompt.py
xfire/auth/: __init__.py  store.py
xfire/config/: defaults.py  settings.py
xfire/core/: __init__.py  baseline.py  cache.py  context_builder.py  diff_resolver.py  finding_synthesizer.py  intent_inference.py  models.py  orchestrator.py  policy_engine.py  severity.py
xfire/demo/: scenarios.py
xfire/integrations/github/: comment_poster.py  pr_loader.py
xfire/output/: __init__.py  debate_view.py  debug_log.py  json_report.py  markdown_report.py  sarif_report.py
xfire/skills/: base.py  code_navigation.py  config_analysis.py  data_flow_tracing.py  dependency_analysis.py  git_archeology.py  test_coverage_check.py
(+12 files in other folders)
