[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossfire"
version = "0.1.0"
description = "Multiple agents. One verdict. Zero blind spots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "google-generativeai>=0.8.0",
    "rich>=13.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
crossfire = "crossfire.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
