[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfire"
version = "0.1.1"
description = "Multiple agents. One verdict. Zero blind spots."
readme = "README.md"
license = "GPL-3.0-only"
authors = [{name = "Harish Kolla", email = "hkolla03@gmail.com"}]
requires-python = ">=3.11"
keywords = [
    "security",
    "code-review",
    "ai",
    "llm",
    "static-analysis",
    "vulnerability",
    "multi-agent",
    "claude",
    "openai",
    "gemini",
    "sarif",
    "devsecops",
    "ci-cd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "rich>=13.0",
    "structlog>=23.0",
]

[project.urls]
Homepage = "https://github.com/Har1sh-k/xfire"
Repository = "https://github.com/Har1sh-k/xfire"
Issues = "https://github.com/Har1sh-k/xfire/issues"
Documentation = "https://github.com/Har1sh-k/xfire/tree/main/docs"
Changelog = "https://github.com/Har1sh-k/xfire/blob/main/CHANGELOG.md"
Blog = "https://harishkolla.substack.com/"

[tool.hatch.build.targets.wheel]
packages = ["xfire"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
xfire = "xfire.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"xfire/cli.py" = ["F821"]
"xfire/agents/prompts/*.py" = ["E501"]
"xfire/core/intent_inference.py" = ["E501"]
"xfire/output/debug_log.py" = ["E501"]
"tests/unit/test_intent_inference.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
